# meshtastic_godot

./: .gitignore  Cargo.toml  README.md  icon.svg.import  meshtasticGodot.gdextension  plugin.cfg  project.godot
.github/workflows/: rust.yml
Example/scenes/: cell.tscn  main.tscn  meshtastic_example_interface.tscn  server_list.tscn  sub_port_tic_tac_toe.tscn  text_client.tscn
Example/scripts/: board.gd  main_script.gd  server_browser.gd  server_list.gd  subport_tic_tac_toe.gd  text_client.gd
addons/meshtastic_godot/: .gitignore  Cargo.toml  meshtasticGodot.gdextension
addons/meshtastic_godot/src/: api.rs  godot_binds.rs  lib.rs
addons/meshtastic_godot/src/mesh_connection/: connection.rs  mt_node.rs  packet_handler.rs
src/: api.rs  connection.rs  godot_binds.rs  ipc.rs  lib.rs  mt_node.rs  packet_handler.rs  router.rs  util.rs
src/mesh_connection/: ipc.rs  mod.rs  mt_node.rs  packet_handler.rs  router.rs
