[package]
name = "meshtastic_godot"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}
meshtastic = { git = "https://github.com/meshtastic/rust", branch = "main"}
serialport = "*"
tokio = { version = "1.10", features = ["rt"] }
anyhow = "1.0.93"
strum = "0.26.3"
thiserror = "2.0.3"
strum_macros = "0.26.4"
hex = "0.4.3"


[lib]
crate-type = ["cdylib"]
